--- a/src/pytorch/pytorch.ipynb
+++ b/src/pytorch/pytorch.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a1b7f18d",
    "metadata": {},
    "outputs": [
@@ -25,12 +25,14 @@
        "        [0., 0., 0.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# pytorch 不保证这里是什么，可能是 0，可能有值，取决于这块内存之前存了什么\n",
+    "# 总之是一个随便的值\n",
     "torch.empty(2, 3)"
    ]
   },
